--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,37 @@
     <groupId>com.seqhack.teamoc</groupId>
     <artifactId>SixthSense</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <name>SixthSense</name>
 
     <properties>
         <spring.version>4.3.2.RELEASE</spring.version>
     </properties>
 
+    <packaging>war</packaging>
+
     <dependencies>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet.jsp</groupId>
+            <artifactId>jsp-api</artifactId>
+            <version>2.1</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>RELEASE</version>
+        </dependency>
 
         <!-- Spring 3 dependencies -->
         <dependency>
@@ -34,5 +59,17 @@
         </dependency>
 
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.6</version>
+                <configuration>
+                    <attachClasses>true</attachClasses>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
