added route logic stubs

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -42,4 +42,8 @@
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
 
+    <listener>
+        <listener-class>com.seqhack.teamoc.sixthsense.MyContextListener</listener-class>
+    </listener>
+
 </web-app>
